# ENGR101-AVC

./: README.md  robot dimesions.txt
models/: Crappy re-design.FCStd  VW base design.fcstd  cool_albar(2).stl  cool_albar.stl  dazzling_jaagub-blad.stl  initialDesign.fcstd  spectacular_rottis-curcan.stl
src/: CMakeLists.txt  IRsensor.cpp  analysePicture.cpp  libE101.h  main.cpp  movement.cpp  open-gate.cpp
